<resources>
    <string name="app_name">Reward Style Exam</string>

    <string name="file_name_prompt">Please input the file name:</string>
    <string name="default_file_name">https://fetch-hiring.s3.amazonaws.com/hiring.json</string>
    <string name="parse">Parse</string>
    <string name="file_name_empty">Please enter a file name!</string>
    <string name="invalid_file_name">Please enter a json file name!</string>

    <string name="back">Back</string>
    <string name="id">ID</string>
    <string name="list_id">List ID</string>
    <string name="name">Name</string>
</resources>
